--- a/content/styles/less/common.less
+++ b/content/styles/less/common.less
@@ -1,6 +1,22 @@
 /****************************
  * Variables
  ***************************/
+
+
+@black: black;
+@white: white;
+@lightergrey: #f0f0f0;
+@lightgrey: #e7e7e7;
+@darkgrey: #a8a8a8;
+@darkgrey_b: #474747;
+@darkgrey_c: #3a3a3a;
+@orange: #FE5140;
+@lightorange: #fe6859;
+@red: #CB3729;
+@lightred: #d94f42;
+@mobile_mediaquery_value: 700px;
+@tablet_mediaquery_value: 1000px;
+
 /****************************
  * Font
  ***************************/
