--- a/content/styles/css/styles.css
+++ b/content/styles/css/styles.css
@@ -60,6 +60,7 @@ select {
 }
 .navbar.navbar-default a {
   color: white !important;
+  font-weight: bold;
 }
 .navbar.navbar-default .navbar-toggle {
   border-color: transparent;
@@ -119,6 +120,11 @@ select {
 .btn {
   border-radius: 0;
 }
+.btn-logos{
+  border: 1px solid;
+  margin-right: 7px;
+  margin-left: 7px;
+}
 .btn-primary {
   background-color: #fe5140;
   border-color: #fe6859;
@@ -144,6 +150,9 @@ select {
 /****************************
  * Login
  ***************************/
+.login-btn{
+  background-color: orange;
+}
 .login-window {
   width: 250px;
   border: 1px solid #d3d3d3;
@@ -441,6 +450,7 @@ footer .footer-images .aowp {
   text-align: center;
   padding: 5px;
   padding-top: 30px;
+  margin-top: 10px;
   min-height: 100px;
   color: white;
   font-weight: bold;
@@ -454,6 +464,7 @@ footer .footer-images .aowp {
 }
 .journey .food-type-container .description {
   background-color: white;
+  color: black;
   min-height: 130px;
   padding: 8px;
   font-size: 12px;
@@ -614,17 +625,9 @@ footer .footer-images .aowp {
   margin-bottom: 5px;
   border-top-color: #a8a8a8;
 }
-.journey-overview-items .ft-item .fti-body .contact  {
+.journey-overview-items .ft-item .fti-body .contact .r-status {
   font-weight: bold;
 }
-
-span.r-status{
-  font-weight:normal;
-}
-span.r-rating{
-  border-color:gold;
-}
-
 .journey-overview-items .ft-item .fti-body .contact .r-status.open {
   color: green;
 }
@@ -648,7 +651,6 @@ span.r-rating{
 .journey-overview-items .fti-body .r-rating span.star-active:before {
   content: "\f005";
   color: #e3cf7a;
-  border-color:#e3cf7a;
 }
 /* Mobile adjustments */
 @media (max-width: 700px) {
@@ -719,7 +721,7 @@ span.r-rating{
  * Login
  ***************************/
 .login-window {
-  width: 250px;
+  width: 200px;
   border: 1px solid #d3d3d3;
   padding: 10px 5px 10px 5px;
   text-align: center;
@@ -729,7 +731,7 @@ span.r-rating{
   background-color: white;
   -webkit-box-shadow: -5px 6px 9px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -5px 6px 9px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: -5px 6px 9px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: -5px 6px 9px 0px rgba(0, 0, 0, 0);
   z-index: 100;
 }
 .login-window .sprites {
@@ -744,7 +746,7 @@ span.r-rating{
   border-bottom: 10px solid white;
   position: absolute;
   top: -10px;
-  right: 10px;
+  right: 20px;
 }
 /* Mobile adjustments */
 @media (max-width: 700px) {
@@ -918,7 +920,6 @@ footer .footer-images .aowp {
   font-weight: bold;
   margin-left: 8px;
 }
-
 .journey-challenge .challenge .ch-body {
   margin-top: 5px;
   padding-top: 5px;
@@ -1004,7 +1005,6 @@ footer .footer-images .aowp {
     margin-bottom: 5px;
   }
 }
-
 /****************************
  * Journey Screen
  ***************************/
@@ -1096,7 +1096,7 @@ footer .footer-images .aowp {
   min-height: 120px;
 }
 .journey-overview .food-type-overview .ft-progress .circleContainer {
-  background-color: lightpink;
+  background-color: #fe6859;
   background-repeat: no-repeat;
   background-position: center;
   background-image: url(../../images/american-food-icon.png), linear-gradient(126deg, transparent 50%, #fe5140 50%), linear-gradient(90deg, #fe5140 50%, transparent 50%);
@@ -1105,7 +1105,7 @@ footer .footer-images .aowp {
   background-color: black;
 }
 .journey-overview .food-type-overview .ft-description {
-  max-width: 300px;
+  max-width: 500px;
 }
 .journey-overview .food-type-overview .ft-description .st-progress {
   color: #a8a8a8;
@@ -1119,11 +1119,6 @@ footer .footer-images .aowp {
   background-color: #f1f1f1;
   padding: 6px;
   margin-bottom: 5px;
-  width:105%
-}
-span.r-wtime{
-  font-weight: bold;
-
 }
 .journey-overview .food-types-widget .food-type-buttons,
 .journey-overview .food-types-widget .food-type-dropdown {
@@ -1158,7 +1153,6 @@ span.r-wtime{
 }
 .journey-overview-items .ft-item .fti-title {
   margin-left: 15px;
-  font-size:20px;
 }
 .journey-overview-items .ft-item .fti-body {
   margin-top: 5px;
@@ -1196,22 +1190,9 @@ span.r-wtime{
   margin-bottom: 5px;
   border-top-color: #a8a8a8;
 }
-.journey-overview-items .ft-item .fti-body .contact  {
+.journey-overview-items .ft-item .fti-body .contact .r-status {
   font-weight: bold;
 }
-.btn-primary{
-  width: 105%;
-}
-#grad1
-{
-  width: 20%;
-  height: 50%;
-  background-size: cover;
-  background-image: linear-gradient(to bottom right,#002f4b,#dc4225);
-  opacity: .6;
-}
-
-
 .journey-overview-items .ft-item .fti-body .contact .r-status.open {
   color: green;
 }
@@ -1300,4 +1281,20 @@ span.r-wtime{
   .journey-overview-items {
     padding: 0;
   }
+}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus{
+  background-color:#fe6859 ;
+}
+
+
+.dropdown-menu{
+  padding: 20px 0;
+  text-align: center;
+  box-shadow: 0 8px 6px -6px black;
+}
+.navbar-pad{
+  padding-left: 0px;
+}
+.navbar-brand{
+  padding-left: 5px;
 }
