index-journey-challenge have done for desktop,tablet and mobile layout.

--- a/content/styles/css/styles.css
+++ b/content/styles/css/styles.css
@@ -379,7 +379,7 @@ footer .footer-images .aowp {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-/*creted by shakti ranjan samal*/
+/*creted by shakti_team2  ranjan samal*/
 .journey-challenge .challenge .ch-body .contact .today{
   font-weight: bold;
   color: black;
