--- a/content/styles/css/styles.css
+++ b/content/styles/css/styles.css
@@ -5,6 +5,8 @@
 /****************************
  * Font
  ***************************/
+
+
 @font-face {
   font-family: "ProximaNova";
   font-style: normal;
@@ -32,6 +34,15 @@ h6 {
   font-family: 'ProximaNova', sans-serif;
   font-weight: bold;
 }
+.h4 {
+  font-family: 'ProximaNova', sans-serif;
+  font-weight: bold;
+  padding-top: 81px
+}
+.h2{
+  font-family: 'ProximaNova', sans-serif;
+  font-weight: 100;
+}
 p,
 a,
 span,
@@ -40,6 +51,7 @@ input,
 table,
 select {
   font-family: 'ProximaNova', sans-serif;
+  color:grey;
 }
 .clear {
   clear: both;
@@ -147,6 +159,11 @@ select {
   border-color: #e44839;
   color: #e7e7e7;
 }
+
+.btn1 {
+  border-radius: 0;
+}
+
 /****************************
  * Login
  ***************************/
@@ -170,6 +187,7 @@ select {
 .login-window .sprites {
   display: inline-block;
   cursor: pointer;
+
 }
 .arrow-up {
   width: 0;
@@ -215,6 +233,7 @@ footer .footer-images .accenture-owp {
 footer .footer-images .accenture-owp,
 footer .footer-images .aowp {
   float: left;
+  margin-top: 2%;
 }
 /****************************
  * Main Content
@@ -228,10 +247,19 @@ footer .footer-images .aowp {
 .main-content .main-content-intro {
   padding-top: 120px;
 }
+
+.main-content-intro>h4{
+  padding-top: 40px;
+}
 .main-content .main-content-intro .btn {
   margin-top: 40px;
   margin-bottom: 20px;
   width: 200px;
+}
+.main-content .main-content-intro .btn1 {
+  margin-top: 40px;
+  margin-bottom: 20px;
+  width: 100px;
 }
 .main-content .main-content-discover {
   color: white;
@@ -243,6 +271,7 @@ footer .footer-images .aowp {
 }
 .main-content .main-content-discover .glyphicon {
   padding-left: 15px;
+  height:10px;
 }
 /* Mobile adjustments */
 @media (max-width: 510px) {
@@ -297,7 +326,8 @@ footer .footer-images .aowp {
   text-align: center;
   background: #fe5140;
   display: inline-block;
-  margin-bottom: 10px;
+  margin-bottom: 50%;
+
 }
 .circleContainer .sprites {
   display: inline-block;
@@ -450,7 +480,6 @@ footer .footer-images .aowp {
   text-align: center;
   padding: 5px;
   padding-top: 30px;
-  margin-top: 10px;
   min-height: 100px;
   color: white;
   font-weight: bold;
@@ -464,7 +493,6 @@ footer .footer-images .aowp {
 }
 .journey .food-type-container .description {
   background-color: white;
-  color: black;
   min-height: 130px;
   padding: 8px;
   font-size: 12px;
@@ -721,7 +749,7 @@ footer .footer-images .aowp {
  * Login
  ***************************/
 .login-window {
-  width: 200px;
+  width: 250px;
   border: 1px solid #d3d3d3;
   padding: 10px 5px 10px 5px;
   text-align: center;
@@ -731,7 +759,7 @@ footer .footer-images .aowp {
   background-color: white;
   -webkit-box-shadow: -5px 6px 9px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -5px 6px 9px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: -5px 6px 9px 0px rgba(0, 0, 0, 0);
+  box-shadow: -5px 6px 9px 0px rgba(0, 0, 0, 0.75);
   z-index: 100;
 }
 .login-window .sprites {
@@ -746,7 +774,7 @@ footer .footer-images .aowp {
   border-bottom: 10px solid white;
   position: absolute;
   top: -10px;
-  right: 20px;
+  right: 10px;
 }
 /* Mobile adjustments */
 @media (max-width: 700px) {
@@ -754,8 +782,16 @@ footer .footer-images .aowp {
     position: absolute;
     left: 0;
     right: 0;
-    margin-left: auto;
+    margin-left:4%;
     margin-right: auto;
+    box-shadow: none;
+    width: 150px;
+
+  }
+  @media (max-width: 700px) {
+    .facebook, .twitter, .google-plus {
+      border: solid 1px black;
+    }
   }
   .arrow-up {
     display: none;
@@ -768,6 +804,7 @@ footer {
   margin-top: 30px;
   margin-bottom: 30px;
   text-align: center;
+  background-color: white;
 }
 footer .footer-images {
   display: inline-block;
@@ -793,8 +830,9 @@ footer .footer-images .aowp {
   text-align: center;
 }
 .main-content .main-content-intro {
-  padding-top: 120px;
+  padding-top: 45px;
 }
+/*
 .main-content .main-content-intro .btn {
   margin-top: 40px;
   margin-bottom: 20px;
@@ -868,6 +906,7 @@ footer .footer-images .aowp {
 }
 .circleContainer .sprites {
   display: inline-block;
+  height: 22%;
 }
 .main-features .road-directions,
 .main-features .utensils {
@@ -1062,6 +1101,7 @@ footer .footer-images .aowp {
   .journey .food-type-container .description {
     min-height: 50px;
   }
+
 }
 /****************************
  * Journey Overview Screen
@@ -1286,6 +1326,8 @@ footer .footer-images .aowp {
   background-color:#fe6859 ;
 }
 
+/* Tablate adjustments */
+@media(min-device-width:511px)and(max-device-width:768px){
 
 .dropdown-menu{
   padding: 20px 0;
@@ -1297,4 +1339,4 @@ footer .footer-images .aowp {
 }
 .navbar-brand{
   padding-left: 5px;
-}
+}}
