JourneyStarted - UI Fixes

--- a/content/styles/css/styles.css
+++ b/content/styles/css/styles.css
@@ -1445,7 +1445,7 @@ footer .footer-images .aowp {
 }}
 
 /*changes by munikrishna*/
-.dropdown-menu {
+.mostrecent-dropdown {
   border-color:red;
 }
 .span.r-wtime
