--- a/app/views/header.html
+++ b/app/views/header.html
@@ -3,15 +3,24 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
+      <div class="navbar-header hidden-xs">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand">FoodieJournal</a>
-        <a class="btn-login navbar-brand login-collapsed">Login</a>
+        <a class="navbar-brand ">FoodieJournal</a>
+      </div>
+
+      <div class="navbar-header hidden-md hidden-sm">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar hidden-xs "></span>
+          <span class="icon-bar hidden-xs"></span>
+          <span class="icon-bar hidden-xs"></span>
+        </button>
+        <a class=" navbar-brand ">FoodieJournal</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -21,10 +30,8 @@
           </li>
         </ul>
       </div>
-      <!-- /.navbar-collapse -->
 
-
-      <!-- Login -->
+    <!-- Login -->
       <div class="row login-window hide">
         <div class="col-xs-12">
           <form>
@@ -34,19 +41,23 @@
             <div class="form-group">
               <input type="password" class="form-control" placeholder="Password">
             </div>
-            <button ui-sref="journey" type="submit" class="btn btn-default btn-block">Login</button>
+            <button ui-sref="journey" type="submit" class="btn btn-default hidden-sm hidden-md btn-block">Login</button>
+            <button ui-sref="journey" type="submit" class="btn btn-warning btn-block hidden-xs">Login</button>
           </form>
         </div>
-        <div class="col-xs-12">
-          <p>or login with:</p>
+        <div class="col-xs-12 hidden-xs">
+          <p>or login with:</p>      
+        </div>  
+        <div class="col-xs-12 hidden-sm hidden-md">
+          <p>or login with</p> 
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 btn-logos">
           <div class="sprites facebook"></div>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 btn-logos">
           <div class="sprites twitter"></div>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-3 btn-logos">
           <div class="sprites google-plus"></div>
         </div>
         <div class="arrow-up"></div>
