--- a/content/styles/css/styles.css
+++ b/content/styles/css/styles.css
@@ -160,6 +160,7 @@ select {
   border: 1px solid;
   margin-right: 7px;
   margin-left: 7px;
+  padding: 7px;
 }
 .btn-primary {
   background-color: #fe5140;
@@ -860,8 +861,10 @@ font-weight: normal;
 
   }
   @media (max-width: 700px) {
-    .facebook, .twitter, .google-plus {
+    .btn-logos{
       border: solid 1px black;
+      padding:5px;
+      margin: 5px;
     }
   }
   .arrow-up {
