Styling Journey page

--- a/content/styles/css/styles.css
+++ b/content/styles/css/styles.css
@@ -549,6 +549,7 @@ font-weight: normal;
   text-align: center;
   padding: 5px;
   padding-top: 30px;
+  margin-top: 10px;
   min-height: 100px;
   color: white;
   font-weight: bold;
